# splice

./: .gitignore  README.md  index.html  package-lock.json  package.json  poetry.txt  pyproject.toml  readme.md  requirements.txt  sound__text.txt  sound_land.fig  tsconfig.json
backend/app/src/: models.py  parse.py
frontend/src/css/: font.css  gr-sounds.css  main.css  style.css
html/: sounds.html  studio.html
my_project/backend/: main.py
my_project/backend/models/: models.py
my_project/backend/my_parser/: parser.py
my_project/frontend/static/css/: footer-style.css  gr-about.css  gr-contactus.css  gr-pricing.css  gr-sounds.css  gr-studio.css  header-style.css  main.css  style.css
my_project/frontend/static/ts/: contactus.tsx  main.ts  modules.ts  studio.tsx
my_project/frontend/templates/: about.html  contactus.html  index.html  pricing.html  sounds.html  studio.html
