[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["kerrymiles <cers29fot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.2.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
fake-useragent = "^1.5.1"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
